css/overview.css
.body-overview {
    display: grid;
    min-height: 100vh;
    gap: 0;
    grid-template-columns: 1fr;
    grid-template-rows: 3.75rem 1fr 3.75rem;
    grid-template-areas:
    "header"
    "main"
    "footer";
}

main {
    grid-area: main;
    display: flex;
    align-items: center;
    flex-direction: column;
}

.dashboard-container {
    text-wrap-mode: nowrap;
    display: grid;
    grid-auto-columns: auto 8.5rem;
    grid-auto-rows: 7rem;
    gap: 1rem;
    align-items: center;
    justify-content: center;
    margin: auto;
    opacity: 0;
    grid-template-areas:
    "card-urgent-deadline card-urgent-deadline"
    "card-todo card-todo"
    "card-board card-progress"
    "card-feedback card-done";
}

.dashboard-position {
    opacity: 1;
}

.dashboard-animation-mobile {
    transform: translateY(100%);
    animation: slideBottomToTop 600ms 1300ms ease-in forwards;
}

@keyframes slideBottomToTop {
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

.card {
    background-color: #ffffff;
    border-radius: var(--main-radius);

    &:hover {
        cursor: pointer;

    }
}

.border-none {
    border: none !important;
}

.card-urgent-deadline {
    height: 120%;
    border-radius: var(--main-radius);
    grid-area: card-urgent-deadline;
    background: var(--main-color);
    color: #ffffff;
    display: flex;
    align-items: center;
    padding: 0.625rem;
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.16);

    &:hover,
    :active {
        cursor: pointer;
        animation: borderFade 300ms forwards;
        transition: background-color 300ms, color 300ms;
        background-color: #ffffff;
        color: var(--main-color);


        .separator {
            background-color: var(--main-color);
        }

        span {
            color: var(--main-color);
        }
    }
}

@keyframes borderFade {
    to {
        border-radius: 0 var(--main-radius) var(--main-radius) var(--main-radius);
    }
}

.urgent-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: left;
    padding-right: .5rem;
}

.separator {
    width: 2px;
    height: 100%;
    background-color: #ffffff;
    border-radius: 4px;
}

.icon-and-count {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: .5rem;
}

.deadline-section {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding-left: .5rem;
    justify-content: center;
}

.deadline-section .date {
    font-size: 1rem;
    font-weight: bold;
    line-height: 1.2rem;
}

.card-todo {
    grid-area: card-todo;
    background: var(--color-menu-active);
    padding: 12px 20px;
    display: flex;
    align-items: center;
    height: 90%;
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.16);

    &:hover,
    :active {
        animation: borderFade 300ms forwards;
        transition: background-color 300ms, color 300ms;
        background-color: #ffffff;


        span {
            color: var(--main-color);
        }
    }

    .number {
        color: black;
    }

    .title {
        color: var(--main-color);
        font-size: 1rem;
        margin-left: 1rem;
    }
}

.todo-content {
    display: flex;
    align-items: center;
    gap: 15px;
}

.card-board {
    grid-area: card-board;
}

.card-progress {
    grid-area: card-progress;
}

.card-feedback {
    grid-area: card-feedback;
}

.card-done {
    grid-area: card-done;
}

.card-board,
.card-progress,
.card-feedback,
.card-done {
    padding: 10px var(--padding-side);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    border-radius: var(--main-radius);
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.16);

    &:hover,
    :active {
        animation: borderFade 300ms forwards;
        transition: background-color 300ms, color 300ms;
        background-color: var(--main-color);
        color: #ffffff;

        span {
            color: #ffffff;
        }
    }
}

.card-board .icon-section,
.card-progress .icon-section,
.card-feedback .icon-section,
.card-done .icon-section {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    gap: 10px;
}

.icon-circle {
    width: 3rem;
    height: 3rem;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 3px solid #ffffff;

    img {
        border-radius: 999px;
        width: 100%;

    }
}

.number {
    font-size: 2rem;
    font-weight: 700;
    color: black;
    line-height: 1;
}

.card-urgent-deadline .number {
    color: #ffffff;
    font-size: 2.2rem;
}

.title {
    font-size: 1rem;
    font-weight: 400;
    color: var(--main-color);
    text-align: center;
}

.title-date {
    font-size: 0.8rem;
    font-weight: 400;
    color: #ffffff;
    text-align: center;
}

.urgent-section .title,
.deadline-section .title {
    color: #ffffff;
    font-weight: 400;
}

.greeting-container {
    grid-area: greeting;
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    width: auto;
    height: auto;
    top: 50%;
    opacity: 0;
    visibility: hidden;
    overflow: hidden;


    p {
        font-size: 2rem;
        font-weight: 400;
    }

    h1,
    .marquee-text {
        font-weight: bold;
        font-size: 2rem;
    }

    .h1-colorized {
        color: var(--main-color);
    }
}

.greeting-animation-mobile {
    animation: slideOutToTop 500ms ease-in 1000ms forwards;
}


.greeting-container.loaded {
    opacity: 1;
    visibility: visible;
}

@keyframes slideOutToTop {
    0% {
        opacity: 1;
        transform: translateY(0);
    }

    100% {
        opacity: 0;
        transform: translateY(-4rem);
        display: none;
    }
}

.greeting-guest {
    font-size: 2.5rem;
    font-weight: 700 !important;
    margin-bottom: 0;
}


.m-left {
    margin-left: 1rem;
}

@media (width >= 812px) {
    .body-overview {
        display: grid;
        min-height: 100vh;
        gap: 0;
        grid-template-columns: 250px 1fr;
        grid-template-rows: 6rem 1fr;
        grid-template-areas:
    "header header"
    "aside-desktop main"
    }

    main {
        display: grid;
        align-items: unset;
        justify-content: unset;
        flex-direction: unset;
    }

    .dashboard-container {
        margin-left: 9rem;
        grid-auto-rows: auto 9.5rem;
        grid-auto-columns: 9.5rem;
        justify-content: flex-start;
        transform: translateY(0%);
        opacity: 1;
        animation: none;
        column-gap: 1.5rem;
        row-gap: 1.5rem;
        grid-template-areas:
                "greeting greeting"
                "card-urgent-deadline card-urgent-deadline"
                "card-todo card-todo"
                "card-progress card-feedback"
                "card-board card-done"
    }

    .greeting-container {
        position: unset;
        width: 100%;
        height: auto;
        animation: none;
        opacity: 1;
        visibility: visible;

        p {
            font-size: 2.25rem;
            font-weight: 400;
        }

        .h1-wrapper {
            overflow: hidden;
            flex: 1;
            min-width: 0;
            margin-left: 1.25rem;
        }

        .h1-colorized {
            white-space: nowrap;
        }

        .h1-colorized.marquee {
            overflow: visible;
        }

        .h1-colorized.fixed {
            overflow: hidden;
            text-overflow: ellipsis;
            max-width: 100%;
            display: block;
        }

        .marquee-text {
            display: inline-block;
            white-space: nowrap;
            font-size: 2.5rem;
            font-weight: bold;
        }

    }

    @keyframes marqueeOnce {
        from {
            transform: translateX(100%);
        }
        to {
            transform: translateX(-100%);
        }
    }

    .greeting-guest {
        font-size: 3rem;
        margin-bottom: auto;
    }

    .card-urgent-deadline {
        justify-content: center;
        height: 9.5rem;

        .number {
            font-size: 2rem;
        }

        .urgent-section {
            padding-right: .2rem;

            .title {
                margin-top: .5rem;
            }
        }

        .deadline-section {
            padding-left: .2rem;

            .date {
                font-size: 1.25rem;
                margin-bottom: .5rem;
            }

            .title-date {
                font-size: 1.125rem;
            }

        }
    }

    .icon-circle {
        width: 4rem;
        height: 4rem;
    }

    .todo-content {
        align-items: center;
        gap: 10px;
    }

    .card-board,
    .card-progress,
    .card-feedback,
    .card-done {
        padding: 24px var(--padding-side);
        justify-content: space-between;
    }

    .card-todo {
        padding: 24px var(--padding-side);
        display: flex;
        align-items: center;
        row-gap: .5rem;
        border-radius: var(--main-radius);
        box-shadow: 0 0 4px rgba(0, 0, 0, 0.16);

        .title {
            font-size: 1.125rem;
        }
    }

    .card {
        height: 100%;

        .number {
            font-size: 2.5rem;
        }
    }

    .title {
        font-size: 1.125rem;
    }
}

@media (width >= 990px) {

    .greeting-container {
        display: flex;
        flex-direction: row;

        p {
            font-size: 3rem;
        }

        h1,
        .marquee-text {
            font-size: 4rem;
            font-weight: bold;
        }
    }

    .greeting-guest-large {
        font-weight: bold;
        font-size: 4rem !important;
    }

    .dashboard-container {
        grid-auto-rows: 10.5rem;
        grid-auto-columns: 10.5rem;
        grid-template-areas:
                "greeting greeting greeting"
                "card-urgent-deadline card-urgent-deadline card-urgent-deadline"
                "card-todo card-todo card-progress "
                "card-feedback card-board card-done"
    }

    .card-urgent-deadline {
        height: 10.5rem;

        .number {
            font-size: 2.5rem;
        }

        .urgent-section {
            padding-right: 1.5rem;
        }

        .deadline-section {
            padding-left: 1.5rem;

            .date {
                font-size: 1.75rem;
                margin-bottom: .75rem;
            }
        }
    }

    .card {
        height: 10.5rem;

        .title {
            font-size: 1.25rem;
        }
    }

    .title {
        font-size: 1.25rem;
    }
}

@media (width >= 1200px) {
    .card-todo {
        flex-direction: column;

        .title {
            margin-left: unset;
            font-size: 1.125rem;
        }
    }

    .dashboard-container {
        grid-template-areas:
      "greeting greeting greeting greeting"
      "card-urgent-deadline card-urgent-deadline card-urgent-deadline card-board"
      "card-todo card-progress card-feedback card-done";
    }
}

